ARTICLES MENU JUMPS TO CORRECT ARTICLES

--- a/src/components/Middle/ArticlesPage/articlesPage.css
+++ b/src/components/Middle/ArticlesPage/articlesPage.css
@@ -11,8 +11,6 @@
 }
 #articlesMenuDiv{
     width:100vw;
-    text-decoration:underline;
-    color:blue;
     display:flex;
     justify-content:center;
     align-items:center;
